// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FavButton /> should has same snapshot(with isFavorite prop) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../src/assets/img/fav.png",
      }
    }
    style={
      {
        "height": 22.857142857142858,
        "padding": 13.714285714285715,
        "width": 22.857142857142858,
      }
    }
  />
</View>
`;

exports[`<FavButton /> should has same snapshot(with isFavorite=false prop) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../src/assets/img/unfav.png",
      }
    }
    style={
      {
        "height": 22.857142857142858,
        "padding": 13.714285714285715,
        "width": 22.857142857142858,
      }
    }
  />
</View>
`;
